# thayumanavarhsv2017.github.io

./: .gitignore  .travis.yml  archive.html  contact.html  index.html  proc.html  read.html  resume.html  run.html  search.html  site.hs  stack.yaml  vtweb.cabal
css/: style.css  style1.css  style1.css~
js/: script.js  script.js~
posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
scss/: _01_settings_colors.scss  _02_settings_typography.scss  _04_settings_global.scss  _05_normalize.scss  _06_typography.scss  _07_layout.scss  _functions.scss  style.scss  style.scss_1  style.scss~
scss/foundation-components/: _top-bar.scss
templates/: contact.html  default.html  footer.html  head.html  navigation.html  proc.html  read.html  resume.html  run.html  search.html
traces/: ride1.geojson
