name:               vtweb
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.5.1
                  , hakyll-sass == 0.2.3
                  , hsass == 0.4.1
                  , hlibsass == 0.1.6.0
  ghc-options:      -threaded
  default-language: Haskell2010
